_includes/css/style.css
/* Base */

* {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
}

body {
  font-family: 'Alegreya Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 21px;
  font-weight: 300;
  background: #008080;
  box-shadow: inset 0 3px 30px rgba(0,0,0,.3);
}

#content {
    background: #fff;
    margin-top: 2em;
}
.clear {
  display: block;
}

.clear:after {
  content: " ";
  display: block;
  height: 0;
  clear: both;
  visibility: hidden;
}

/* Sections */

.intro {
  margin-top: 2em;
}

body > header, body > section, body > footer {
  float: left;
  width: 100%;
  clear: both;
}

/* Header */
#logo {
    height: 10em;
}

body > header {
  display: inline-block;
}

#maintitle {
    margin-top: 0.1em;
    font-weight: 700;
    font-size: 96pt;
}


nav ul {
  padding: 0;
  margin: 0;
  font-family: 'Alegreya Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

nav li {
  display: inline-block;
}

.main-nav li {
  margin-right: 10px;
}

.main-nav li a {
  border-radius: 5px;
  color: #008080;
  font-weight: 900;
  font-size: 18px;
  padding: 0.5em 0.5em;
  transition: all .25s;
   -moz-transition: all .25s;
   -webkit-transition: all .25s;
}

.main-nav li a:hover {
  background: #cccccc;
}

.main-nav li.current a {
  background: #008080;
  color: black;
  box-shadow: inset 0 1px 0 rgba(255,255,255,.5), 0 1px 5px rgba(0,0,0,.5);
}

.mobile-nav ul {
  overflow: hidden;
  width: 100%;
  display: table;
}

.mobile-nav a {
  float: left;
  width: 100%;
  background: #333;
  color: #fc0;
  text-align: center;
  font-size: 14px;
  font-weight: 900;
  padding: 5px;
  border-radius: 5px;
}

.mobile-nav .current a {
  background: #fc0;
  color: #222;
  box-shadow: inset 0 1px 0 rgba(255,255,255,.5), 0 1px 5px rgba(0,0,0,.5);
  text-shadow: 0 1px 0 rgba(255,255,255,.3);
}

.mobile-nav li {
  display: table-cell;
  width: 20%;
  padding: 8px 2px;
}

@media (max-width: 768px){
  .main-nav ul {
    text-align: right;
  }
}
@media (max-width: 830px){
  .main-nav .show-on-mobiles {
    display: inline;
  }
  .main-nav .hide-on-mobiles {
    display: none;
  }
}

/* Footer */

body > footer {
  background: #008080;
  color: #888;
  margin-top: 40px;
}

/* Intro */

.intro .unit {
  padding: 10px 0 40px;
}

.intro p {
  font-size: 1.5em;
  line-height: 1em;
  margin: 0 2em;
  text-align: center;
}

@media (min-width: 629px){
  .intro p {
    font-size: 2.5em;
  }
}

/* Features boxes */
.features .unit {
    margin-bottom: 2em;
}

.feature {
    padding: 0.5em 0.75em 0.5em 1em ;
    border-radius: 10px;
    background: #ffd753; 
    height: 100%;
    margin: 0 0.5em;
}

.feature h2 {
    color: #008080;
}

/* Article - Used for both docs and news */


article {
  border-radius: 10px;
  padding: 20px;
  margin: 0 10px;
  box-shadow: 0 3px 10px rgba(0,0,0,.1);
  font-size: 16px;
}
article h2 {
    color: #008080;
}
article h1 {
    color: #008080;
}


@media (max-width: 480px){
  article ul {
    padding-left: 20px;
  }
}

@media (max-width: 568px){
  article {
    margin: 0;
  }
}

@media (min-width: 768px){
  article {
    padding: 40px 40px 30px;
    font-size: 21px;
  }
}

/* Right-side nav - used by both docs and news */

aside {
  padding-top: 30px;
}

aside h4 {
  text-transform: uppercase;
  font-size: 14px;
  font-weight: 700;
  padding: 0 0 10px 30px;
  margin-left: -30px;
  display: inline-block;
  border-bottom: 1px solid #ffd75e;
}

aside ul {
  padding-left: 0;
}

aside ul:first-child {
  margin-top: 0;
}

aside li {
  list-style-type: none;
}

aside li a {
  font-size: 16px;
  position: relative;
  color: #008080;
}

aside li.current a:before {
  content: "";
  border-color: transparent transparent transparent #ffd75e;
  border-style: solid;
  border-width: 10px;
  width: 0;
  height: 0;
  position: absolute;
  top: 0;
  left: -30px;
}

/* Documentation */

.docs article {
  min-height: 800px;
}

.docs .content {
  padding: 0;
}

.section-nav {
  text-align: center;
  padding-top: 40px;
  position: relative;
  background: url(../img/article-footer.png) top center no-repeat;
  margin: 40px -20px 10px;
}

.section-nav > div {
  width: 49.5%;
}

.section-nav a, .section-nav span {
  color: #fff;
  font-size: 16px;
  text-transform: uppercase;
  font-weight: 700;
  padding: 8px 12px 10px;
  border-radius: 5px;
  /*border: 1px solid #333;*/
  box-shadow: 0 1px 3px rgba(0,0,0,.3), inset 0 1px 1px rgba(255,255,255,.5);
  background: #008080;
}

.section-nav a:hover {
  color: #fff;
  background: #888;
}

.section-nav .next, .section-nav .prev {
  position: relative;
}

.section-nav .next:after, .section-nav .prev:before {
  font-size: 36px;
  color: #222;
  font-weight: 900;
  text-shadow: 0 1px 0 rgba(255,255,255,.4);
  position: absolute;
  top: -7px;
}

.section-nav .next:after {
  content: "›";
  right: 10px;
}

.section-nav .prev:before {
  content: "‹";
  left: 10px;
}

.section-nav .prev, .section-nav .prev:hover {
  /*float: left;*/
  padding-left: 30px;
}

.section-nav .next, .section-nav .next:hover {
  /*float: right;*/
  padding-right: 30px;
}

.section-nav .disabled {
  opacity: .5;
  /*filter: alpha*/
  cursor: default;
}

.docs-nav-mobile select {
  width: 100%;
}

/* News */

article h2:first-child {
  margin-top: 0;
}

.post-category,
.post-meta {
  display: inline-block;
  vertical-align: middle;
  font-size: .8em;
}
/* ... */

